Fix broken fstab when mount point includes space.

fstab column width was calculated before spaces were escaped which would
result in no space between mount point and file system type columns.

BUG: 446218